# crewAI_stock_analyzer

./: README.md  pyproject.toml
src/crewai_stock_analyzer/: crew.py  main.py
src/crewai_stock_analyzer/config/: agents.yaml  tasks.yaml
