[project]
name = "crewai_stock_analyzer"
version = "0.1.0"
description = "crewAI-stock-analyzer using crewAI"
authors = [{ name = "Dawid Kupczyk", email = "dawid.kupczyk.dev@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
crewai_stock_analyzer = "crewai_stock_analyzer.main:run"
run_crew = "crewai_stock_analyzer.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
